<resources>
    <string name="app_name">ProyectoOdontologia</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="email_backup"> Email para el respaldo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Contraseña muy corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">Registrarse</string>
    <string name="back">Back</string>
    <string name="succes">Cita reservada con exito.</string>
    <string name="availableHours">No hay horas disponibles para la fecha seleccionada, intente con otra fecha.</string>
    <string name="connectingError">Error de conexión, intentelo nuevamente.</string>
    <string name="forget_password">Olvidé mi contraseña</string>
    <string name="success_introduction">Email ingresado con exito</string>
    <string name="password_recovery">Recuperación de Contraseña</string>
    <string name="accept"> Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="odontological_sheet">Ficha Odontológica</string>
    <string name="action_settings">Configuración</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="contactBanner">Odontología TEC San Carlos</string>
    <string name="contactNice">El area de Salud está presta a atender cualquier consulta. Comuniquese con nosotros
                                y con mucho gusto le atenderemos!</string>
    <string name="dental_tab">Ficha Odontológica</string>
    <string name="surname">Primer Apellido:</string>
    <string name="second_surname">Segundo Apellido:</string>
    <string name="name">Nombre:</string>
    <string name="student_id">Carné:</string>
    <string name="major">Carrera:</string>
    <string name="civil_status">Estado Civil:</string>
    <string name="CCSS_id">Carné CCSS:</string>
    <string name="birth_date">Fecha de Nacimiento:</string>
    <string name="person_id">Cédula:</string>
    <string name="family_address">Dirección familiar:</string>
    <string name="phone">Teléfono:</string>
    <string name="check_afirmation_question">Marque si la respuesta es afirmativa</string>
    <string name="check_afirmation_question_indication">Ha tenido:</string>
    <string name="recent_physical_test">Examen físico reciente</string>
    <string name="heart_diseases">Problemas Cardiácos</string>
    <string name="low_blood_pressure">Presión arterial baja</string>
    <string name="high_blood_pressure">Presión arterial alta</string>
    <string name="circulatory_diseases">Problemas circulatorios</string>
    <string name="pain_in_anditive_region">Dolor en región anditiva</string>
    <string name="excessive_bleeding">Excesivo sangramiento</string>
    <string name="bleeding_gums">Sangramiento de encías</string>
    <string name="any_allergy">Alguna alergia</string>
    <string name="allergy_antibiotics">Alergia antibióticos</string>
    <string name="asthma">Asma</string>
    <string name="hepatitis">Hepatitis</string>
    <string name="nephrosis">Nefrosis</string>
    <string name="rheumatic_fever">Fiebre reumática</string>
    <string name="epilepsy">Epilepsia</string>
    <string name="venereal_diseases">Enfermedades venéreas</string>
    <string name="thyroid_gland_disorders">Alteraciones glándula tiroides</string>
    <string name="others">Otras:</string>
    <string name="whitch">Indique:</string>
    <string name="scholarship">Beca:</string>
    <string name="about">Acerca de..</string>
    <string name="succes_appointment">Cita reservada con éxito</string>
    <string name="appointments">Citas</string>
    <string name="days">Días</string>
    <string name="DateSelected">Ya tienes una cita pendiente.</string>
    <string name="noDateSelected">No hay fecha seleccionada.</string>
    <string name="appointment_registry">Registro de citas</string>
    <string name="error_appointment"> Seleccione el día y la hora</string>
    <string name="contacts">Contactos</string>
    <string name="developers">Desarrolladores</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="reserve">Reservar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="datesRegister">Registro de citas</string>
    <string name="date">Fecha</string>
    <string name="tooth">Pieza dental</string>
    <string name="medication">Tratamiento</string>
    <string name="payment">Saldo</string>
    <string name="description">Descripcion</string>
    <string name="log_out">Salir</string>
    <string name="hours">Horas</string>

    <string name="title_activity_developers">Desarrolladores</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="justin_dev">Justin Alberto Castillo Valladares</string>
    <string name="brayan_dev">Bryan Jesus Ruiz Bran</string>

    <string name="save_btn">GUARDAR</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="quit">¿Salir?</string>
    <string name="community">Comunidad de Aplicaciones Móviles</string>
    <string name="odontology">Odontología</string>
</resources>
