<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.DevelopersFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="318dp"
                android:layout_height="420dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/logocomunidad"
                android:id="@+id/imageView2"/>

            <TextView
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/community"/>
            <TextView
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_overlay"
                android:text="@string/justin_dev"/>
            <TextView
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_overlay"
                android:text="@string/brayan_dev"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
