
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.FichaOdontologicaInformacionPersonal">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/scholarship"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView15"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/scholarship_tv"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView17"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_tv"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/surname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView19"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/surname_tv"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/second_surname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView21"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/second_surname_tv"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/student_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView23"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/student_id_tv"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/major"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView25"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/major_tv"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/civil_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView27"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/civil_status_tv"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/CCSS_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView29"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/CCSS_id_tv"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/birth_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView31"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/birth_date_tv"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/person_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/person_id_tv"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/family_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/family_address_tv"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone_tv"
                    android:layout_weight="2" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
